added textures to planets

--- a/Cours/src/style.css
+++ b/Cours/src/style.css
@@ -4,3 +4,25 @@
     box-sizing: border-box;
     overflow: hidden;
 }
+
+@font-face {
+    font-family: 'Astronova';
+    src: url('../fonts/astronova.ttf') format('truetype'); /* Adjust the path and file format if needed */
+  }
+  
+
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#title {
+    position: absolute;
+    top: 50px;
+    font-family: Arial, sans-serif;
+    font-size: 32px;
+    color: white;
+    font-family: 'Astronova', Arial, sans-serif;
+  }
+  
