--- a/Cours/src/style.css
+++ b/Cours/src/style.css
@@ -1,41 +1,83 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    overflow: hidden;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow: hidden;
+
 }
 
 @font-face {
-    font-family: 'Astronova';
-    src: url('../fonts/astronova.ttf') format('truetype'); /* Adjust the path and file format if needed */
-  }
-  
+  font-family: 'Astronova';
+  src: url('../fonts/astronova.ttf') format('truetype');
+  /* Adjust the path and file format if needed */
+}
 
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #title {
-    position: absolute;
-    top: 50px;
-    font-family: Arial, sans-serif;
-    font-size: 32px;
-    color: white;
-    font-family: 'Astronova', Arial, sans-serif;
-  }
-
-#text-container{
-    position: absolute;
-    top: 20%;
-    left: 65%;
-    color: white;
-    font-size: 32px;
+  position: absolute;
+  top: 50px;
+  font-size: 32px;
+  color: white;
+  font-family: 'Astronova', Arial, sans-serif;
 }
 
-.paragraph{
-  color: rebeccapurple;
+#text-container {
+  position: absolute;
+  top: 15%;
+  left: 65%;
+  color: white;
+  font-size: 32px;
+  font-family: 'VT323', monospace;
+
+  /* Glassmorphism effect */
+  background: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+  padding: 20px;
+  /* Other glassmorphism styles */
+
+  /* Default background color */
+  background-color: rgba(0, 0, 0, 0.7);
+  /* Change as per your default color */
+}
+
+/* Planet-specific background colors */
+.mercure {
+  background-color: rgba(174, 198, 207, 0.7) !important;
+}
+
+.venus {
+  background-color: rgba(245, 166, 35, 0.7) !important;
+}
+
+.terre {
+  background-color: rgba(92, 142, 202, 0.7) !important;
+}
+
+.mars {
+  background-color: rgba(220, 84, 57, 0.7) !important;
+}
+
+.jupiter {
+  background-color: rgba(183, 124, 48, 0.7) !important;
+}
+
+.saturne {
+  background-color: rgba(193, 166, 122, 0.7) !important;
+}
+
+.uranus {
+  background-color: rgba(141, 204, 212, 0.7) !important;
+}
+
+.neptune {
+  background-color: rgba(60, 108, 224, 0.7) !important;
 }
 
 .fade-in {
@@ -56,4 +98,10 @@
   opacity: 0;
 }
 
-  
+.planet-title, .planet-size, .planet-distance{
+  margin-bottom: 1rem;
+}
+
+.planet-description{
+  font-size: 26px;
+}
